--- a/client/src/old unused.css
+++ b/client/src/old unused.css
@@ -273,7 +273,13 @@ img {
 }
 
 
-.container{
+.container {
   background-color: #276678;
   width: 100%;
+}
+
+.place-info {
+  display: flex ;
+  width: 30%;
+  border-radius: 5px;
 }
