--- a/server/views/about_en.ejs
+++ b/server/views/about_en.ejs
@@ -79,7 +79,16 @@
 
               <li> <a href="http://localhost:8000/questions">Questions</a> </li>
 
+              <li> <a></a> </li>
+              <li> <a></a> </li>
 
+              <li>
+                <ul>
+                  <li class="active"> <a href="http://localhost:3000/trackvac-api/about/en">En</a></li>
+                  <li class=""> <a>|</a></li>
+                  <li class=""> <a href="http://localhost:3000/trackvac-api/about/ar">عربي</a></li>
+                </ul>
+              </li>
 
             </ul>
           </div><!-- end main-menu -->
